# HackspaceBot

./: .gitignore  .pre-commit-config.yaml  LICENSE  __main__.py  pyproject.toml
.github/workflows/: deploy.yml  format_and_lint.yml
src/core/: bot.py  checks.py  embeds.py  errors.py  tree.py
src/database/: __init__.py  client.py
src/database/models/: __init__.py  config.py  contest_notifications.py
src/database/tables/: __init__.py  _table.py  config.py  contest_notifications.py  feature_flags.py  migrations.py
src/ext/: __init__.py  code-snippets.py  codeforces.py  mod-log.py  source.py  system.py
src/utils/: ansi.py  constants.py  env.py  features.py  help.py  logger.py  tree.py
src/views/: __init__.py  messages.py  roles.py
src/views/paginators/: __init__.py  advanced.py  button.py  select.py
